[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cepf-sdk"
version = "0.2.0"
description = "CEPF SDK — UnifiedSenseCloud multi-sensor point-cloud library"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev    = ["pytest", "pytest-cov"]
io     = ["laspy"]
ouster = ["ouster-sdk>=0.13"]
all    = ["ouster-sdk>=0.13", "laspy"]

[tool.setuptools.packages.find]
include = ["cepf_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
